--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
 		<div class="vidcont myoverlay">
 			<div class="divvideo">
 				<video id="myVideo" width="100%" height="100%">
-				  <source src="source/media/video.mp4" type="video/mp4">
+				  <source src="video.mp4" type="video/mp4">
 				  Browser Anda tidak mendukung video HTML5.
 				</video>
 			</div>
 		</div>
-		<img src="source/media/wp2.png">
+		<img src="wp2.png">
 		<div class="container">
 			<div class="myclock">
 				<div class="myakun" id="nama">
@@ -502,7 +502,6 @@
 				<div class="myresize"></div>
 			</div>
 		</div>
-		<span style="position: absolute; text-align: center; line-height: 100vh; width: 100vw; z-index:-10;">Jangan dijual 😡</span>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	  	<script type="text/javascript">
 	  		/*
@@ -805,9 +804,9 @@
 					else if(h>9)tulis('siang','selamat bekerja')
 					else if(h>4)tulis('pagi','selamat beraktivitas');
 					else tulis('malam','seharusnya kamu sudah tidur');
-					if(h>18)     document.querySelector('img').src="source/media/wp1.png";
+					if(h>18)     document.querySelector('img').src="wp1.png";
 					else if(h>4) document.querySelector('img').src="source/media/wp2.png";
-					else         document.querySelector('img').src="source/media/wp1.png";
+					else         document.querySelector('img').src="wp1.png";
 				}
 				if(window.btoa($('.cc').text())!='TWFkZSBXaXRoIOKdpO+4jw=='){
 					if(jalan) $('.container').remove();
